# rexompiler

./: .gitignore  .gitmodules  CMakeLists.txt  EDG-submodule-sha1.md  Makefile.am  README.md  build  cherry-pick-rose.md  configure.ac  enums.txt  rose_config.h.in.cmake  tup.config
src/: CMakeLists.txt  Makefile.am  featureTests.h  fileList.coverity  rose-compiler.C  rose-config.C  rose.h  roseInternal.h
src/3rdPartyLibraries/: CMakeLists.txt  Makefile.am
src/3rdPartyLibraries/MSTL/: CMakeLists.txt  Makefile.am
src/3rdPartyLibraries/flang-parser/: CMakeLists.txt
src/3rdPartyLibraries/fortran-parser/: CMakeLists.txt  omp_lib.rmod  omp_lib_kinds.rmod
src/ROSETTA/: CMakeLists.txt  Makefile.am  astNodeList
src/ROSETTA/Grammar/: Common.code  Cxx_GlobalDeclarations.macro  Expression.code  LocatedNode.code  Node.code  Statement.code  Support.code  Symbol.code  Type.code  grammarNewDeleteOperatorMacros.macro
src/ROSETTA/src/: AstNodeClass.C  AstNodeClass.h  CMakeLists.txt  CxxGrammarMetaProgram.C  Makefile.am  ROSETTA_macros.h  StringUtility.C  buildStorageClasses.C  expression.C  grammar.C  grammar.h  grammarString.C  grammarString.h  node.C  statement.C  support.C  symbol.C  type.C
src/Rose/: AST.h  CMakeLists.txt  CommandLine.h  Initialize.C  Makefile.am  StringUtility.h
src/Rose/AST/: CMakeLists.txt  Checker.h  Makefile.am
src/Rose/AST/checker/: checker.C  integrity_declarations.C  integrity_edges.C  integrity_symbols.C  integrity_types.C
src/Rose/CodeGen/: API.h  Factory.h  Object.h
src/Rose/CodeGen/factory/: classes.txx  functions.txx  namespaces.txx  typedefs.txx  variables.txx
src/Rose/CommandLine/: CMakeLists.txt  Parser.C
src/Rose/Diagnostics/: Diagnostics.C
src/Rose/StringUtility/: CMakeLists.txt  NumberToString.C  NumberToString.h  StringToNumber.C  StringToNumber.h
src/backend/: CMakeLists.txt  Makefile.am
src/backend/unparser/: CMakeLists.txt  IncludedFilesUnparser.C  Makefile_variables  nameQualificationSupport.C  nameQualificationSupport.h  unparser.C  unparser.h
src/backend/unparser/CxxCodeGeneration/: CMakeLists.txt  unparseCxx.h  unparseCxx_expressions.C  unparseCxx_statements.C  unparseCxx_types.C
src/backend/unparser/FortranCodeGeneration/: CMakeLists.txt  unparseFortran_statements.C
src/backend/unparser/formatSupport/: CMakeLists.txt  unparseFormatHelp.h
src/backend/unparser/languageIndependenceSupport/: CMakeLists.txt  modified_sage.C  name_qualification_support.C  unparseLanguageIndependentConstructs.C  unparseLanguageIndependentConstructs.h
src/frontend/: CMakeLists.txt  Makefile.am
src/frontend/CxxFrontend/: Makefile.am
src/frontend/CxxFrontend/Clang/: Makefile.am
src/frontend/Experimental_General_Language_Support/: Makefile.am
src/frontend/OpenFortranParser_SAGE_Connection/: FortranModuleInfo.C  FortranModuleInfo.h  FortranParserActionROSE.C  FortranParserState.h  fortran_support.C
src/frontend/SageIII/: CMakeLists.txt  IncludeDirective.C  Makefile.am  OmpAttribute.C  OmpAttribute.h  README  Utf8.C  accAstConstruction.cpp  accAstConstruction.h  attachPreprocessingInfo.C  attachPreprocessingInfo.h  attachPreprocessingInfoTraversal.C  expression_lexer.ll  expression_parser.yy  fixupCopy_references.C  fixupCopy_scopes.C  fixupCopy_symbols.C  manglingSupport.C  nodeBuildFunctionsForAterms.C  omp.h  ompAstConstruction.cpp  ompAstConstruction.h  ompFortranParser.C  ompSupport.C  ompSupport.h  omp_exprparser_lexer.ll  omp_exprparser_parser.yy  omplexer.ll  ompparser.yy  rose_attributes_list.C  rose_attributes_list.h  rosedefs.h  rtiHelpers.C  rtiHelpers.h  sage3.h  sage3basic.h  stringify.C  stringify.h
src/frontend/SageIII/astFixup/: AstFixup.h  (+7 more)
src/integration/ROSE-LLVM-connection/: RoseConnectionClangPlugin.cpp
src/midend/: CMakeLists.txt  Makefile.am  Makefile.am-recursive
src/midend/abstractLayer/: AstAnnotator.C  AstAnnotator.h  CMakeLists.txt  Label.C  Labeler.C  Makefile_variables  SgNodeHelper.C  SgNodeHelper.h  VariableIdMapping.C  VariableIdMapping.h
src/midend/astDiagnostics/: AstConsistencyTests.C  AstConsistencyTests.h  AstStatistics.C
src/midend/astDump/: AstDOTGeneration.C  AstDOTGenerationImpl.C  CMakeLists.txt  Makefile.am  copyGraph.C
src/midend/astMatching/: Makefile.am-recursive
src/midend/astProcessing/: AstAttributeMechanism.C  AstAttributeMechanism.h  AstDOTGeneration.C  AstDOTGenerationImpl.C  AstProcessing.C  AstProcessing.h  AstRestructure.C  AstRestructure.h  AstSharedMemoryParallelSimpleProcessing.C  AstTraversal.h  CMakeLists.txt  Makefile.am-recursive  Makefile_variables  graphProcessing.h  graphTemplate.h  plugin.C
src/midend/astQuery/: astQuery.h  nameQuery.C  nodeQuery.C  numberQuery.C
src/midend/astSnippet/: Snippet.C
src/midend/programAnalysis/: CMakeLists.txt  Makefile.am
src/midend/programTransformation/: CMakeLists.txt  Makefile.am-nonrecursive  Makefile.am-recursive  Makefile_variables
src/roseExtensions/: CMakeLists.txt  Makefile.am
src/roseSupport/: CMakeLists.txt  CommandLine.C  Diagnostics.C  Makefile.am  sourceLocationInheritedAttribute.C  stringify.C  stringify.h  transformationSupport.C  transformationSupport.h  utility_functions.C  utility_functions.h
src/util/: CMakeLists.txt  FileSystem.C  FileSystem.h  Makefile.am  Map.h  mlog.C  mlog.h  processSupport.C  processSupport.h
src/util/Sawyer/: CMakeLists.txt  Makefile.am  updateFromGithub.sh
src/util/StringUtility/: BitOps.h  CMakeLists.txt  Convert.C  Escape.C  Escape.h  FileNameClassifier.C  FileUtility.C  FileUtility.h  Makefile.am  NumberToString.C  NumberToString.h  Predicate.C  Replace.C  Replace.h  SplitJoin.C  SplitJoin.h  StringToNumber.C  StringUtility.h  Trim.h
src/util/commandlineProcessing/: commandline_processing.C  commandline_processing.h
src/util/graphs/: BaseGraphCreate.h  GraphAccess.h
src/util/stringSupport/: FileNameClassifier.C  FileUtility.C  FileUtility.h
src/util/support/: BitVectorRepr.h  FileHelper.h  TreeImpl.h
tests/smoke/functional/: Makefile.am
tools/: Makefile.am  moveDeclarationToInnermostScope.C
tools/featureVector/: featureVector.cpp
(+27404 files in other folders)
