include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs

AM_CPPFLAGS = $(ROSE_INCLUDES) 

noinst_LTLIBRARIES = libexperimentalRoseGeneralLanguage.la

libexperimentalRoseGeneralLanguage_la_SOURCES = \
  sage-tree-builder.C ModuleBuilder.C

noinst_HEADERS = \
  sage-tree-builder.h ModuleBuilder.h
